   bzrlib.

Internals
*********

.. Major internal changes, unlikely to be visible to users or plugin 
   developers, but interesting for bzr developers.

Testing
*******

.. Fixes and changes that are only relevant to bzr's test framework and 
   suite.  This can include new facilities for writing tests, fixes to 
   spurious test failures and changes to the way things should be tested.



bzr-upload 1.0.0
################

:1.0.0: 2010-12-10

New Features
************

* ``.bzrignore-upload`` can be used to avoid uploading some files or
  directories. It uses the same syntax as ``.bzrignore`` including regular
  expressions.
  (Martin Albisetti, Vincent Ladeuil, #499525, #499941)

* Remote branches can be used to upload from.
  (Gary van der Merwe, Vincent Ladeuil)

* The auto hook verbosity is now controlled by the 'upload_auto_quiet'
  config variable. If defaults to False if not set.
  (Vincent Ladeuil, #312686)

* The file where the revision id is stored on the remote server is now
  controlled by the 'upload_revid_location' configuration variable. It
  defaults to '.bzr-upload.revid'.
  (Vincent Ladeuil, #423331)

* Upload now checks that the revision we are uploading is a descendent
  from the revision that was uploaded, and hence that the branchs that
  they were uploaded from have not diverged. This can be ignored by passing
  the --overwrite option. (Gary van der Merwe)


Bug Fixes
*********

* Fix auto hook trying to display an url without using the right encoding.
  (Vincent Ladeuil, #312686)

* Fix compatibility with bzr versions that don't provide
  get_user_option_as_bool().
  (Vincent Ladeuil, #423791)

* Emit warnings instead of backtrace when symlinks are encountered.
 (Vincent Ladeuil, #477224)

Documentation
*************

* Clarify 'changes' definition in online help.
  (Vincent Ladeuil, #275538)

* Move the README file into the module doc string so that it
  becomes available through the 'bzr help plugins/upload'